<resources>
    <string name="app_name">BackItUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Home</string>
    <string name="home_button">android.R.drawable.ic_menu_share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cart">Cart</string>
    <string name="home_activity_name">HOME</string>
    <string name="search_hint">Start typing in searchbar to find \n product.</string>
    <string name="search_edit_text_hint">Search for products</string>
    <string name="title_text_account">ACCOUNT</string>
    <string name="text_order_history">Order History</string>
    <string name="text_manage_addresses">Manage Addresses</string>
    <string name="title_text_about">ABOUT</string>
    <string name="text_abotus">About Us</string>
    <string name="text_terms_of_use">Terms Of Use</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_learn_more">Learn More</string>
    <string name="title_text_general">GENERAL</string>
    <string name="text_faq">FAQs</string>
    <string name="text_rate_app">Rate Our App</string>
    <string name="text_invite_friends">Invite Friends</string>
    <string name="text_feedback">Contact Us</string>
    <string name="text_signin">Sign In / Join Tailored Inc</string>
    <string name="text_country">United Arab Emirates</string>
    <string name="text_countryName">Dubai</string>
    <string name="title_text_order_history">ORDER HISTORY</string>
    <string name="text_date">Date Added</string>
    <string name="text_status">Status</string>
    <string name="text_comment">Comment</string>
    <string name="Remove">Remove</string>
    <string name="testRemove">Remove</string>
    <string name="productname">product name</string>
    <string name="quantity">quantity</string>
    <string name="categoryname">category name</string>
    <string name="prize">prize</string>
    <string name="orderid">Order Id : </string>
    <string name="cname">Custemer name</string>
    <string name="remove_cart">Remove from Cart</string>
    <string name="conform_message">Are you sure you  want to remove this product from cart?</string>
    <string name="replace">Replace with your own action</string>
    <string name="action">Action</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="order_hi">ORDER HISTORY</string>
    <string name="two">2</string>
    <string name="order">Order Id</string>
    <string name="pending">pending</string>
    <string name="txt1">1</string>
    <string name="txt2">2</string>
    <string name="txt3">3</string>
    <string name="txt4">4</string>
    <string name="txt5">5</string>
    <string name="txt6">6</string>
    <string name="txt7">7</string>
    <string name="txt8">8</string>
    <string name="txt9">9</string>
    <string name="title_order_detail">ORDER DETAILS</string>
    <string name="text_order_date">00/00/0000</string>
    <string name="text_view_payment_type">Cash On Delievery</string>
    <string name="text_view_delievery_type">Free Shipping</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="title_address_details">ADDRESS DETAILS</string>
    <string name="cartDetailsTitle">CART</string>
    <string name="cartEmptyDescriptionLine1">SHOPPING BAG EMPTY</string>
    <string name="button_cart">GO TO HOMEPAGE</string>
    <string name="category_description">Category</string>
    <string name="iv_shoppingBag">Shopping Bag</string>
    <string name="cotact_name_text">Your Name</string>
    <string name="contact_button_text">SUBMIT</string>
    <string name="cotact_email_text">Email</string>
    <string name="contact_contactno_text">Contact Number</string>
    <string name="contact_subject_text">Subject</string>
    <string name="contact_message_text">Message</string>
    <string name="err_msg_name">Enter Your Name</string>
    <string name="err_msg_mob">Enter Contact Number</string>
    <string name="title_faq">FAQs</string>
    <string name="text_logout">Logout</string>
    <string name="slide_btn_next">Next</string>
    <string name="slide_btn_done">DONE</string>
    <string name="headphone">Headphones</string>
    <string name="description">This is splash screen</string>
    <string name="contactUs">Contact Us</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="sign_up_link">Sign Up </string>
    <string name="facebook">Facebook</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="createaccount">CREATE ACCOUNT</string>
    <string name="signin">Already have an Account?</string>
    <string name="address">Address</string>
    <string name="tooglemsg">Make this my default address</string>
    <string name="submit">SUBMIT</string>
    <string name="infomsg">Dont have an account?</string>
    <string name="or">Or</string>
    <string name="err_msg_lastname">Enter your last name</string>
    <string name="err_msg_email">Enter valid Email</string>
    <string name="err_msg_address">Enter Address</string>
    <string name="err_msg_passmatch">Password and Confirm Password does not Match</string>
    <string name="enterSignIdErrMsg">Enter valid email</string>
    <string name="validNumber">Enter valid UAE phone number</string>
    <string name="enterPasswordErrMsg">Enter valid password</string>
    <string name="united_arab_emiration">United Arab Emirates</string>
    <string name="tv_show_password">SHOW</string>
    <string name="tv_hide_password">HIDE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="nilam_parmar_default">Nilam Parmar(Default)</string>
    <string name="add">add</string>
    <string name="line_1">Line 1</string>
    <string name="line_4">United Arab Emirates</string>
    <string name="icon_edit">&#xf040;</string>
    <string name="fa_delete">&#xf1f8;</string>
    <string name="SELECT">SELECT</string>
    <string name="Category_color">Black</string>
    <string name="Category_Prize">ADE 1,000.00</string>
    <string name="Category_Description">Description</string>
    <string name="action_search">Search</string>
    <string name="Category_Description_Content1">As long as Android doesn’t have a built-in ImageView widget with zoom and scroll capabilities I tries to create one by myself starting from the google repository.</string>
    <string name="Done">DONE</string>
    <string name="Shirt">Shirt</string>
    <string name="Info">INFO</string>
    <string name="New">This is the NEW IMAGE</string>
    <string name="Rigthsing">RigthSingImage</string>
    <string name="Imagechecked">ImageCheched</string>
    <string name="dummy">Dummy</string>
    <string name="cv_image">Cardview image</string>
    <string name="cv_checked">cardview img is checked</string>
    <string name="next">NEXT</string>
    <string name="lapel">LAPEL</string>
    <string name="address_hint">YOUR ADDRESS BOOK IS EMPTY</string>
    <string name="Add_text">Add address for faster chechout</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="manage_address">MANAGE ADDRESS</string>
    <string name="replaceaction">Replace with your own action</string>
    <string name="Quantitys">Quantity select</string>
    <string name="Date">Date</string>
    <string name="cartimage">cartimage</string>
    <string name="empty">empty address</string>
    <string name="text_order_label1">Order Id :</string>
    <string name="line_3">Dubai</string>
    <string name="orderdetails">ORDER DETAILS</string>
    <string name="qty">Qty :</string>
    <string name="err_msg">Enter Proper Message</string>
    <string name="err_msg_subject">Enter Subject</string>
    <string name="details_hisory">ORDER DETAILS</string>
    <string name="msg_something_went_wrong">Something went wrong</string>
    <string name="msg_no_internet">Check Your Internet Connection</string>
    <string name="add_subject">Add Subject</string>
    <string name="sign_in_link">Sign In</string>
    <string name="enterFirstErrMsg">Enter valid first name</string>
    <string name="enterLastErrMsg">Enter valid last name</string>
    <string name="msg_internet_connection_error">Internet connection error</string>
    <string name="Dubai">Dubai</string>
    <string name="Name">Name</string>
    <string name="cono">Contact No</string>
    <string name="remark">Remark</string>
    <string name="enterNametErrMsg">Enter Proper Name</string>
    <string name="enterEmailErrMsg">Enter Proper Email</string>
    <string name="enterConoErrMsg">Enter Proper UAE phone number</string>
    <string name="enterRemarkErrMsg">Enter Proper Remark</string>
    <string name="createstyle">CREATE YOUR OWN STYLE</string>
    <string name="title_text_social">SOCIAL</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_select_product">Please Select Any Product</string>
    <string name="productReminder">\"photos are only for illustrative purpose\"</string>
    <string name="CartActivity_label">Price may vary with fabric Selection and customization upon tailor\'s visit</string>
    <string name="ColorOptional">Color(Optional)</string>
    <string name="Attachement">Attachment</string>
    <string name="dummyX">X</string>
    <string name="SELECT_PAYMENT_ADDRESS">select address</string>
    <string name="scheduleAppointment">Schedule Apppointment</string>
    <string name="TV_TIMESLOT">Choose Appointment</string>
    <string name="useCouponCode">Use Coupon Code</string>
    <string name="enterYourCoupon">Enter Your Coupon</string>
    <string name="apply">Apply</string>
    <string name="usereferralCode">Use Referral Code Discount</string>
    <string name="refferalText">Customers have registered and Purchased using your referral code. Grab your referral code discount now.(10 %)</string>
    <string name="appliedDiscounts">Applied Discounts</string>
    <string name="text_terms_of_use1">TERMS OF USE</string>
    <string name="text_createownstyle">CREATE YOUR OWN STYLE</string>
    <string name="text_aboutus">ABOUT US</string>
    <string name="tv_cart">CART</string>
    <string name="cartDetails">ORDER DETAILS</string>
    <string name="action_progress">PROGRESS BAR</string>
    <string name="timeSlot">-- : --</string>
    <string name="color">Color</string>
    <string name="shades">Shades</string>
    <string name="text_telephone">Change Phone No</string>
    <string name="Confirm">confirm</string>
    <string name="logout">Logout</string>
    <string name="updateNumber">Add/Update Phone No</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="zero">0</string>
    <string name="stepView">the space for the stepIndicater</string>
    <string name="nodate">No time slots available.</string>
    <string name="demotext">demo text</string>
    <string name="INFO">INFO</string>
    <string name="search_hint_no_data">Sorry! we could not find any products related to your search</string>
    <string name="progress_dialog">Please wait..</string>
    <string name="confirm_appointment">Your appointment will be scheduled on %1$s between %2$s ?</string>
    <string name="dummy_facebook_email_id">%1$s\@gmail.com</string>
    <string name="waitPlaceOrder">Please wait, your request is in process.</string>
    <string name="fa_right_arrow">&#xf105;</string>
    <string name="text_tc"><![CDATA[By creating a Tailored-Inc account , you are agreeing to our , Terms&Conditions and Privacy Policy]]></string>
    <string name="TermsandConditions">Please agree to our Terms and Conditions.</string>
</resources>