<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:showIn="@layout/activity_signup"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusRight="@+id/input_layout_last_name"
                android:padding="5dp">

                <EditText
                    android:id="@+id/et_Signup_name"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/et_Signup_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/et_Signup_email"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <EditText
                    android:id="@+id/et_Signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/et_Signup_password"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_Signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/et_Signup_confirm_password"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_Signup_show_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/tv_show_password"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_Signup_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmpassword"
                        android:inputType="textPassword"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_Signup_hide_show_confirmpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/tv_show_password"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_Signup_submit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@color/color_black"
            android:gravity="center"
            android:text="@string/createaccount"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/color_white"
            android:indeterminateTintMode="src_in"
            android:progressTint="@color/colorDarkGrey"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="40dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_sign_up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/signin"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_Signup_signinLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sign_in_link"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
